[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/RockGenerator.gd" type="Script" id=2]
[ext_resource path="res://scripts/Rock.gd" type="Script" id=3]
[ext_resource path="res://scenes/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/cylinder.obj" type="ArrayMesh" id=5]
[ext_resource path="res://assets/InterpolatedCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tex1.png" type="Texture" id=7]
[ext_resource path="res://scripts/Cylinder.gd" type="Script" id=8]
[ext_resource path="res://assets/tex2.png" type="Texture" id=9]
[ext_resource path="res://assets/particle.png" type="Texture" id=10]
[ext_resource path="res://scripts/Game.gd" type="Script" id=11]
[ext_resource path="res://assets/planet.png" type="Texture" id=14]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=15]
[ext_resource path="res://scripts/Score.gd" type="Script" id=16]

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 7 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/0:uv1_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/0:uv1_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 7 )

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/0:uv1_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/0:uv1_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ) ]
}

[sub_resource type="VisualShaderNodeTexture" id=17]
texture = ExtResource( 10 )

[sub_resource type="VisualShader" id=11]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform sampler2D tex_frg_3;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec4 tex_frg_3_read = texture(tex_frg_3, UV.xy);
	vec3 n_out3p0 = tex_frg_3_read.rgb;
	float n_out3p1 = tex_frg_3_read.a;

// Output:0
	ALBEDO = n_out3p0;
	ALPHA = n_out3p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 150 )
nodes/fragment/0/position = Vector2( 620, 220 )
nodes/fragment/3/node = SubResource( 17 )
nodes/fragment/3/position = Vector2( 100, 140 )
nodes/fragment/connections = PoolIntArray( 3, 0, 0, 0, 3, 1, 0, 1 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 11 )

[sub_resource type="QuadMesh" id=8]
material = SubResource( 9 )
size = Vector2( 2, 2 )

[sub_resource type="SphereShape" id=12]
radius = 17.5

[sub_resource type="SpatialMaterial" id=22]
albedo_texture = ExtResource( 14 )
emission_enabled = true
emission = Color( 0.752941, 0.537255, 0.537255, 1 )
emission_energy = 0.5
emission_operator = 0
emission_on_uv2 = false

[node name="Spatial" type="Spatial"]
script = ExtResource( 11 )

[node name="cylinder" type="MeshInstance" parent="."]
transform = Transform( 41, 0, 0, 0, -9.83401e-06, 41, 0, -224.976, -1.79217e-06, 0, 0, 167.333 )
cast_shadow = 0
mesh = ExtResource( 5 )
skeleton = NodePath("../RockGenerator/Rock")
material/0 = SubResource( 14 )
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="cylinder"]
autoplay = "idle"
anims/RESET = SubResource( 18 )
anims/idle = SubResource( 19 )

[node name="cylinder2" type="MeshInstance" parent="."]
transform = Transform( 43, 0, 0, 0, -9.83401e-06, 43, 0, -224.976, -1.87959e-06, 0, 0, 147.648 )
cast_shadow = 0
mesh = ExtResource( 5 )
skeleton = NodePath("../RockGenerator/Rock")
material/0 = SubResource( 15 )
script = ExtResource( 8 )
rot = -0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="cylinder2"]
autoplay = "idle"
anims/RESET = SubResource( 20 )
anims/idle = SubResource( 21 )

[node name="CPUParticles" type="CPUParticles" parent="."]
pause_mode = 2
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 232.079 )
amount = 800
lifetime = 40.0
preprocess = 60.0
local_coords = false
mesh = SubResource( 8 )
emission_shape = 5
emission_ring_radius = 400.0
emission_ring_inner_radius = 0.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
direction = Vector3( 0, 0, 1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
linear_accel = 40.0
linear_accel_random = 0.5
angle_random = 1.0
scale_amount_random = 0.51
hue_variation = 0.28
hue_variation_random = 0.74

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="InterpolatedCamera" parent="." instance=ExtResource( 6 )]

[node name="RockGenerator" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 455.795 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="RockGenerator"]
one_shot = true
autostart = true

[node name="Rock" type="KinematicBody" parent="RockGenerator"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="RockGenerator/Rock"]
shape = SubResource( 12 )

[node name="CSGSphere" type="CSGSphere" parent="RockGenerator/Rock"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
radius = 4.5
radial_segments = 14
rings = 14
material = SubResource( 22 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 15 )
align = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 20.589, 0, 0, 0, 20.589, 0, 0, 0, 1, 0, 0, 270.238 )
visible = false
texture = ExtResource( 9 )
script = ExtResource( 8 )
rot = 0.01

[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="die" from="Player" to="CanvasLayer/Score" method="_on_Player_die"]
[connection signal="spawn" from="RockGenerator" to="." method="_on_RockGenerator_spawn"]
[connection signal="spawn" from="RockGenerator" to="CanvasLayer/Score" method="_on_RockGenerator_spawn"]
[connection signal="timeout" from="RockGenerator/Timer" to="RockGenerator" method="_on_Timer_timeout"]
